# stellus_internship_assesment_task

./: Anchor.toml  Makefile  README.md  bun.lockb  meta.json  package.json  tokenMint.json
app/: .env.example  bun.lockb  package.json  tailwind.config.ts
app/drizzle/: 0000_smart_zarda.sql  0001_massive_stingray.sql
app/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
app/idls/: custom_spl_tokens.json  custom_spl_tokens.ts  stake_tokens.json  stake_tokens.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/my-stake/: page.tsx
app/src/components/: Address.tsx  ConnectWalletButton.tsx  EmptyState.tsx  FormInput.tsx  ModeToggle.tsx  Navbar.tsx  NetworkIndicator.tsx  PoolCard.tsx  StakeCard.tsx  TooltipComponent.tsx  UnStakeCard.tsx
app/src/db/: schema.ts
app/src/hooks/: useAnchor.ts  useAsyncTask.ts  useBalance.ts  useHandleStake.ts  useModal.ts  useStakingAccount.ts
app/src/lib/: constant.ts  utils.ts
migrations/: deploy.ts
programs/custom_spl_tokens/: Cargo.toml
programs/custom_spl_tokens/src/: lib.rs
programs/stake_tokens/: Cargo.toml
programs/stake_tokens/src/: lib.rs
programs/stellus_task_staking/: Cargo.toml
programs/stellus_task_staking/src/: lib.rs
scripts/: closeProgram.ts  deployAndMintToken.ts  deployProgram.ts  fundPool.ts  generateTypes.sh  initializePool.ts  mintTokens.ts  temp.ts  transferTokens.ts
tests/: custom_spl_tokens.test.ts  stake_tokens.test.ts  stake_tokens.ts  stellus_task_staking.test.ts  stellus_task_staking.ts
utils/: helpers.js  helpers.ts  privateKey.js  privateKey.ts
(+12 files in other folders)
