[package]
name = "custom_spl_tokens"
version = "0.1.0"
description = "This program is a custom SPL token program that allows for the creation of a custom token and minting of it."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "custom_spl_tokens"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
